--- a/Assets/_Game/CocoPlay/Role/Editor/config_dress_editor.json
+++ b/Assets/_Game/CocoPlay/Role/Editor/config_dress_editor.json
@@ -61,7 +61,7 @@
             ],
             "dressId"      : "coco",
             "bodyId"       : "common",
-            "enableShadow" : false
+            "enableShadow" : true
         }
     ]
 }
